--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flex-grid-lite",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The Functional Flexbox Column Grid",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,8 @@
     "url": "git+https://github.com/cupiniki/flex-grid-lite.git"
   },
   "keywords": [
-    "grid"
+    "grid",
+    "flex"
   ],
   "author": "cupiniki",
   "license": "MIT",
